# led-device-protocol-ref

./: CMakeLists.txt  simple_client.sh
include/led_server/: protocol_parser.hpp
include/utils/: enum_converter.hpp  filesystem.hpp  string_view.hpp
src/: client.sh  led_server_pipe_transport.cpp  server.cpp  terminal_charset_utils.cpp
